notes. gave up on fixin nav buttons spacing

--- a/src/app/Components/z0-home/z0-home.component.css
+++ b/src/app/Components/z0-home/z0-home.component.css
@@ -1,7 +1,3 @@
-.banner{
-    height: 500px;
-    width: 1645px;
-}
 
 .carousel-item{
     height: 700px;
